RESOLVED FIXED209155
REGRESSION (r257472): Can't start old Safari with new WebKit (dyld: Symbol not found: _WKContextConfigurationSetShouldCaptureAudioInUIProcess)
https://bugs.webkit.org/show_bug.cgi?id=209155
Summary REGRESSION (r257472): Can't start old Safari with new WebKit (dyld: Symbol no...
Z
Reported 2020-03-16 16:13:19 PDT
Not able to start Safari on Catalina (10.15.3) $ svn info Path: . Working Copy Root Path: /Users/user/webkit URL: https://svn.webkit.org/repository/webkit/trunk Relative URL: ^/trunk Repository Root: https://svn.webkit.org/repository/webkit Repository UUID: 268f45cc-cd09-0410-ab3c-d52691b4dbfc Revision: 258497 Node Kind: directory Schedule: normal Last Changed Author: commit-queue@webkit.org Last Changed Rev: 258497 Last Changed Date: 2020-03-16 10:27:05 -0500 (Mon, 16 Mar 2020) Configured as $ Tools/Scripts/set-webkit-configuration --asan --release Built as $ Tools/Scripts/build-webkit Run $ Tools/Scripts/run-safari Starting SafariForWebKitDevelopment with DYLD_FRAMEWORK_PATH set to point to built WebKit in /Users/user/webkit/WebKitBuild/Release. dyld: Symbol not found: _WKContextConfigurationSetShouldCaptureAudioInUIProcess Referenced from: /System/Library/PrivateFrameworks/Safari.framework/Versions/A/Safari Expected in: /Users/user/webkit/WebKitBuild/Release/WebKit.framework/Versions/A/WebKit in /System/Library/PrivateFrameworks/Safari.framework/Versions/A/Safari
Attachments
Patch (2.91 KB, patch)
2020-03-17 01:22 PDT, youenn fablet
no flags
Patch for landing (2.87 KB, patch)
2020-03-18 05:29 PDT, youenn fablet
no flags
Darin Adler
Comment 1 2020-03-16 17:20:10 PDT
Caused by <https://trac.webkit.org/changeset/257472>. Need to leave a stub behind to keep old Safari working. We should fix this so people outside Apple can continue to work on WebKit.
youenn fablet
Comment 2 2020-03-17 01:22:34 PDT
Eric Carlson
Comment 3 2020-03-17 09:19:57 PDT
Comment on attachment 393735 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=393735&action=review > Source/WebKit/UIProcess/API/C/WKContextConfigurationRef.h:75 > +// FIXME: https://bugs.webkit.org/show_bug.cgi?id=209155. Remove this function once no longer useful torun latest WebKit with older Safari. s/torun/to run/
Darin Adler
Comment 4 2020-03-17 12:50:28 PDT
Comment on attachment 393735 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=393735&action=review > Source/WebKit/UIProcess/API/C/WKContextConfigurationRef.h:76 > +WK_EXPORT void WKContextConfigurationSetShouldCaptureAudioInUIProcess(WKContextConfigurationRef configuration, bool allowed); In past cases like this one we left the thing out of the header file and put it in the .cpp file with a comment like the one above. We should put it at the top of the .cpp file instead of here.
youenn fablet
Comment 5 2020-03-18 05:29:20 PDT
Created attachment 393834 [details] Patch for landing
WebKit Commit Bot
Comment 6 2020-03-18 07:24:24 PDT
Comment on attachment 393834 [details] Patch for landing Clearing flags on attachment: 393834 Committed r258629: <https://trac.webkit.org/changeset/258629>
WebKit Commit Bot
Comment 7 2020-03-18 07:24:25 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 8 2020-03-18 07:25:15 PDT
Note You need to log in before you can comment on or make changes to this bug.